--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -45,11 +45,12 @@
                 <EditText
                     android:id="@+id/username"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:layout_marginHorizontal="30dp"
 
                     android:ems="10"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:hint="Email"/>
 
             </TableRow>
 
@@ -66,10 +67,11 @@
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:layout_marginHorizontal="30dp"
                     android:ems="10"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:hint="Contraseña"/>
 
             </TableRow>
 
