--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="SIGNUP ACTIVITY"
-            android:textSize="33dp" />
+            android:textSize="48dp" />
 
         <TableLayout
             android:layout_width="329dp"
@@ -45,10 +45,11 @@
                 <EditText
                     android:id="@+id/username"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="30dp"
+                    android:layout_height="48dp"
+                    android:layout_marginHorizontal="48dp"
                     android:ems="10"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:hint="Email"/>
 
             </TableRow>
 
@@ -65,10 +66,11 @@
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:layout_marginHorizontal="30dp"
                     android:ems="10"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:hint="Contraseña"/>
 
             </TableRow>
 
@@ -85,10 +87,11 @@
                 <EditText
                     android:id="@+id/repassword"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="48dp"
                     android:layout_marginHorizontal="30dp"
                     android:ems="10"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:hint="Confirmar contraseña"/>
 
             </TableRow>
 
